syntax = "proto3";
import "Protos/ChatMessage.proto";

service WanBotAgent {
  rpc GetVersion (GetVersionRequest) returns (GetVersionReply);
  rpc CreateChatStream (stream ToHostMessage) returns (stream ToClientMessage);
}

message GetVersionRequest {
}
message GetVersionReply {
  string version = 1;
}

message ToHostMessage {
	string session = 1;
	ChatMessage chatMessage = 2;
}
message ToClientMessage {
	string session = 1;
	ChatMessage chatMessage = 2;
}